# AI-CUP-2025

./: .gitignore  Focal_Loss.py  README.md  config.py  dataloader.py  model.py  modify_test_csv.py  pyproject.toml  test.py  train.py
alan/: change_rate.py  classifier_train.py  classifier_train_label_finetune.py  classifier_train_label_svm.py  dataloader.py  gpt.py  rnn_model.py  train.py  train2.py  vis.py
alan/exp/: exp000_master.py  exp001_first.ipynb  exp002_gru.ipynb  exp003_test.ipynb  exp004_ablation.py  exp005_sweep.py  exp006_pathfy.py  models.py  utils.py
alan/fe/: fe001_base.ipynb  fe002_gru.ipynb  fe003_len500.ipynb  fe004_level.ipynb  fe005_no_straitfy.ipynb  fe006_level_len1000.ipynb
baseline/: baseline.py  original.py
helper/: cosine_schedule_with_warmup.py  csv_dataloader.py  cut.py  cut_methods.py  cut_vis.py  dataloader.py  focal_loss.py  functions.py  hmm_cut_points_results.csv  pre-compute.py  segment.py  transform.py
weight/: weight_05082149.pth  weight_05082319.pth  weight_05151703.pth
wytsai7660/: model.py  train.py
yungan/: model.py  model_withoutPE.py  test.py  train.py  train_withoutPE.py
yungan/weight/: weight_05201914.pth
